--- a/MERN_Assignment_April-Week_2Build_Games/Tic_Tac_Toe/src/components/Tic.css
+++ b/MERN_Assignment_April-Week_2Build_Games/Tic_Tac_Toe/src/components/Tic.css
@@ -13,3 +13,19 @@
 .result{
     color: antiquewhite;
 }
+@media only screen and (max-width: 600px) {
+    .MainC{
+        height: 400px;
+        width: 400px;
+        grid-template-columns: repeat(3, 130px);
+        grid-template-rows: repeat(3, 130px);
+    }
+}
+@media only screen and (max-width: 450px) {
+    .MainC{
+        height: 300px;
+        width: 300px;
+        grid-template-columns: repeat(3, 98px);
+        grid-template-rows: repeat(3, 98px);
+    }
+}
