--- a/MERN_Assignment_April-Week_2Build_Games/Tic_Tac_Toe/src/index.css
+++ b/MERN_Assignment_April-Week_2Build_Games/Tic_Tac_Toe/src/index.css
@@ -31,11 +31,13 @@ body {
   background-color: #1a1a1a;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+h2 {
+  /* font-size: 3.2em; */
+  /* line-height: 1.1; */
   color: whitesmoke;
+  text-align: center;
 }
+
 
 button {
   border-radius: 8px;
